# vaxrs-sdk

./: Cargo.toml  LICENSE  flake.nix
.github/: dependabot.yml  mergify.yml
.github/workflows/: cache-push.yml  ci-nix-tests.yml  clean-old-workflow-runs.yml  nix-update-flake-inputs.yml
build-aux/nix/: vaxrs-lib.nix
build-aux/nix/utils/: checks.nix  formatter.nix
crates/lib/vaxrs-lib/: Cargo.toml
