[workspace]
members = [
  "crates/lib/vaxrs-lib",
]
resolver = "2"

[workspace.package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "A Rust set of tools/libraries for interacting with XR/AR/VR devices on multiple platforms."
edition = "2021"
homepage = "https://github.com/vaxrs-sdk/vaxrs-sdk.git"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/vaxrs-sdk/vaxrs-sdk.git"
rust-version = "1.82"
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6"
log = "0.4"
pretty_assertions = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "registry", "env-filter"] }
typed-builder = "0.23.2"
uuid = { version = "1.20", features = ["v4", "serde"] }
whoami = "2.1.0"
