[package]
authors.workspace = true
edition.workspace = true
name = "vaxrs-lib"
rust-version.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
device-type-ar = []
device-type-vr = []
device-type-xr = []
oem-meta-quest = []
oem-viture = []
viture-one = ["oem-viture", "device-type-vr", "device-type-xr"]
viture-pro = ["oem-viture", "device-type-vr", "device-type-xr"]
meta-quest-2 = ["oem-meta-quest", "device-type-vr"]
meta-quest-3 = ["oem-meta-quest", "device-type-vr"]

[dependencies]
eyre.workspace = true
log.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
typed-builder.workspace = true
uuid.workspace = true
whoami.workspace = true
